public class chao {
    private String chao1;
    protected String chao2;
    private int double;
    public boolean chao8;
    public boolean holap() {
    }
    public double holapppppp() {
    }
    private boolean hola hola() {
    }
}
