public class una {
    public double una1;
    public int hola2;
    private String hello2() {
    }
}
